# CEROS

ceros_core/: CMakeLists.txt  package.xml
ceros_core/scripts/: stereo_camera.py
